--- a/06_Paper/COG-ED/Manuscript.Rmd
+++ b/06_Paper/COG-ED/Manuscript.Rmd
@@ -703,6 +703,33 @@ The SVs of all other n-back level pairs were not significantly different.
 
 ```
 
+**something is wrong with the AUC calculation**
+
+```{r AUC_demo, echo=FALSE, message=FALSE, warning=FALSE}
+
+require(gtools)
+demo_data = data.frame(level = rep(1:4,24))
+sv = permutations(n = 4, r = 4, v = c(0.1,0.4,0.85,1))
+m = 1
+for (n in 1:nrow(demo_data)) {
+  demo_data$subject[m:(m+3)] = rep(n,4)
+  demo_data$sv[m:(m+3)] = sv[n,]
+  m = m + 4
+}
+subjectindex <- c(1,which(demo_data$subject != dplyr::lag(demo_data$subject)),nrow(demo_data))
+demo_sv <- data.frame(subject = character(), auc_sv = double(), auc_sv_unsorted = double())
+for (i in 1:(length(subjectindex)-1)) {
+  newdata <- data.frame(subject = demo_data$subject[subjectindex[i]],
+                          auc_sv = auc(demo_data$level[subjectindex[i]:(subjectindex[i+1]-1)], demo_data$sv[subjectindex[i]:(subjectindex[i+1]-1)],
+                                   method = "trapezoid", sort = FALSE),
+                          auc_sv_unsorted = (0.5 * (demo_data$sv[subjectindex[i]] + demo_data$sv[subjectindex[i]+1]) +
+                                               0.5 * (demo_data$sv[subjectindex[i]+1] + demo_data$sv[subjectindex[i]+2]) +
+                                               0.5 * (demo_data$sv[subjectindex[i]+2] + demo_data$sv[subjectindex[i]+3])))
+  demo_sv <- rbind(demo_sv, newdata)
+}
+```
+
+
 ```{r Hypothesis_3a, echo=FALSE, message=FALSE, warning=FALSE}
 
   # H3a: Subjective values predict individual NCS scores.
@@ -713,7 +740,7 @@ The SVs of all other n-back level pairs were not significantly different.
 
   # prepare empty data frame for the loop to feed into
 
-  h3_data <- data.frame(subject = character(), auc_sv = double())
+  h3_data <- data.frame(subject = character(), auc_sv = double(), auc_sv_unsorted = double())
 
   # calculate AUC of SVs per subject
   
@@ -721,7 +748,10 @@ The SVs of all other n-back level pairs were not significantly different.
     
     newdata <- data.frame(subject = data_SV$subject[subjectindex[i]],
                           auc_sv = auc(data_SV$level[subjectindex[i]:(subjectindex[i+1]-1)], data_SV$sv[subjectindex[i]:(subjectindex[i+1]-1)],
-                                   method = "trapezoid", sort = FALSE))
+                                   method = "trapezoid", sort = FALSE),
+                          auc_sv_unsorted = (0.5 * (data_SV$sv[subjectindex[i]] + data_SV$sv[subjectindex[i]+1]) +
+                                               0.5 * (data_SV$sv[subjectindex[i]+1] + data_SV$sv[subjectindex[i]+2]) +
+                                               0.5 * (data_SV$sv[subjectindex[i]+2] + data_SV$sv[subjectindex[i]+3])))
     h3_data <- rbind(h3_data, newdata)
     
   }
