--- a/06_Paper/COG-ED/Manuscript.Rmd
+++ b/06_Paper/COG-ED/Manuscript.Rmd
@@ -711,7 +711,7 @@ require(gtools)
 demo_data = data.frame(level = rep(1:4,24))
 sv = permutations(n = 4, r = 4, v = c(0.1,0.4,0.85,1))
 m = 1
-for (n in 1:nrow(demo_data)) {
+for (n in 1:(nrow(demo_data)/4)) {
   demo_data$subject[m:(m+3)] = rep(n,4)
   demo_data$sv[m:(m+3)] = sv[n,]
   m = m + 4
@@ -719,14 +719,27 @@ for (n in 1:nrow(demo_data)) {
 subjectindex <- c(1,which(demo_data$subject != dplyr::lag(demo_data$subject)),nrow(demo_data))
 demo_sv <- data.frame(subject = character(), auc_sv = double(), auc_sv_unsorted = double())
 for (i in 1:(length(subjectindex)-1)) {
+  sv_sorted <- sort(demo_data$sv[subjectindex[i]:(subjectindex[i]+3)])
   newdata <- data.frame(subject = demo_data$subject[subjectindex[i]],
-                          auc_sv = auc(demo_data$level[subjectindex[i]:(subjectindex[i+1]-1)], demo_data$sv[subjectindex[i]:(subjectindex[i+1]-1)],
-                                   method = "trapezoid", sort = FALSE),
-                          auc_sv_unsorted = (0.5 * (demo_data$sv[subjectindex[i]] + demo_data$sv[subjectindex[i]+1]) +
+                        auc_sv = auc(demo_data$level[subjectindex[i]:(subjectindex[i]+3)], demo_data$sv[subjectindex[i]:(subjectindex[i]+3)],
+                                   method = "trapezoid"),
+                        auc_sv_unsorted = (0.5 * (demo_data$sv[subjectindex[i]] + demo_data$sv[subjectindex[i]+1]) +
                                                0.5 * (demo_data$sv[subjectindex[i]+1] + demo_data$sv[subjectindex[i]+2]) +
-                                               0.5 * (demo_data$sv[subjectindex[i]+2] + demo_data$sv[subjectindex[i]+3])))
+                                               0.5 * (demo_data$sv[subjectindex[i]+2] + demo_data$sv[subjectindex[i]+3])),
+                        auc_sv_sorted = (0.5 * (sv_sorted[1] + sv_sorted[2]) +
+                                           0.5 * (sv_sorted[2] + sv_sorted[3]) +
+                                           0.5 * (sv_sorted[3] + sv_sorted[4])))
   demo_sv <- rbind(demo_sv, newdata)
 }
+ggplot(demo_data, aes(x=level, y=sv, group=subject)) +
+  geom_line(aes(color=subject), size = 1)
+
+ggplot(demo_data[c((1*4+1):(1*4+4),(4*4+1):(4*4+4),(15*4+1):(15*4+4),(17*4+1):(17*4+4)),], aes(x=level, y=sv, group=subject)) +
+  geom_line(aes(color=subject), size = 1.5, position = position_jitter(w = 0.03, h = 0.03))
+ggplot(demo_data[c((3*4+1):(3*4+4),(5*4+1):(5*4+4),(9*4+1):(9*4+4),(11*4+1):(11*4+4)),], aes(x=level, y=sv, group=subject)) +
+  geom_line(aes(color=subject), size = 1.5, position = position_jitter(w = 0.03, h = 0.03))
+ggplot(demo_data[c((0*4+1):(0*4+4),(2*4+1):(2*4+4),(21*4+1):(21*4+4),(23*4+1):(23*4+4)),], aes(x=level, y=sv, group=subject)) +
+  geom_line(aes(color=subject), size = 1.5, position = position_jitter(w = 0, h = 0.03))
 ```
 
 
