--- a/06_Paper/COG-ED/Manuscript.Rmd
+++ b/06_Paper/COG-ED/Manuscript.Rmd
@@ -14,7 +14,8 @@ bibliography      : ref_COG-ED.bib
   library(tidyverse)    # plotting and managing data, "tidyverse" package
   library(bayestestR)   # computing area under the curve, "bayestestR" package
   library(papaja)       # APA conform output, "papaja" package
-  library(nlme)         # fitting nonlinear mixed-effects model
+  library(lmerTest)     # for multilevel modeling
+  library(snow)         # for faster processing
   library(afex)         # compute repeated measures ANOVA, "afex" package
   library(emmeans)      # for custom contrasts in ANOVAs, "emmeans" package
 
@@ -226,7 +227,8 @@ Study data were collected and managed using REDCap electronic data capture tools
 We aimed to conduct all analysis as described in Westbrook et al. [-@Westbrook2013], but the level of detail was not always sufficient, so there might be deviations in terms of data cleaning and degrees of freedom in the statistical procedures.
 The performance measure *d'* was computed as the difference of the *z*-transformed hit rate and the *z*-transformed false alarm rate [@Macmillan1990].
 Reaction time (RT) data was trimmed by excluding all trials with responses faster than 200 ms, as the relevant cognitive processes could not have been completed before [@Ashby1980; @Whelan2008; @Berger2021].
-Post-error trials were also excluded, because RT on those trials is longer due to more cautious behavior [@Dutilh2012; @Houtman2012].
+Error- and post-error trials were excluded, because RT on the latter trials is longer due to more cautious behavior [@Dutilh2012; @Houtman2012].
+#TODO: Tolle Artikel, die schaue ich mir auch noch mal genauer an! Hast du die beiden exclusions schon im script umgesetzt? Falls ja, in welcher Zeile, ich kann es nicht finden...
 Declining performance was investigated by calculating a repeated measures analysis of variance (rmANOVA) with three paired contrasts comparing *d'* between two levels of 2-, 3-, and 4-back at a time.
 Another rmANOVA with three paired contrasts was computed to compare the mean RT between two levels of 2-, 3-, and 4-back at a time.
 To investigate changes in NASA-TLX ratings, six rmANOVAs were computed, one for each NASA-TLX subscale, and each with six paired contrasts comparing the ratings between two levels of 1-, 2-, 3-, and 4-back at a time.
@@ -631,21 +633,16 @@ The SVs of all other n-back level pairs were not significantly different.
   # H2b: Subjective values decline with increasing n-back level, even after controlling for declining task
   # performance measured by signal detection d’ and reaction time.
 
-  # define variables -------------------------------------------------------------
-  # dependent variable:     SV                    numeric                 data_SV
-  # indepenendent variable: n-back level [1-4]    numeric                       
-  # controlled regressors:  d'                    numeric                 dprime
-  #                         mRT                   numeric                 rt
+  # detach afex in order to user lmerTest
+  detach("package:afex", unload = TRUE)
   
-  # get all relevant variables ---------------------------------------------------
+  # get all relevant variables -------------------------------------------------
     
   h2b_data <- cbind(data_SV, dprime["d"], rt["meanrt"])
   
-  # check and specify correct data types -----------------------------------------
-  str(h2b_data)
+  # center predictors ----------------------------------------------------------
   
-  # center predictors ------------------------------------------------------------
-  # center level 1 predictors
+  ## center level 1 predictors
   # two ways: centering at the grand mean (CGM) vs. centering within cluster (CWC) = group mean centering
   # level 1 predictor (SV) is of substantive interest
   # > CWC
@@ -662,47 +659,48 @@ The SVs of all other n-back level pairs were not significantly different.
   h2b_data$level.mwc <- ave(h2b_data$level, h2b_data$subject, FUN = function(x) mean(x, na.rm = T))
   h2b_data$level.cwc <- h2b_data$level - h2b_data$level.mwc
   
-  # no level 2 predictors
+  ## no level 2 predictors
   
-  # change global coding to orthogonal sum-to-zero contrast by -------------------
-  options(contrasts = c("contr.sum", "contr.poly"))
+  # null model -----------------------------------------------------------------
+  m0_h2b <- lmer(sv ~ 1 + (1|subject), 
+                 data = h2b_data)
   
+  # intraclass correlation (ICC)
+  # % of variance can be explained by differences between persons
+  var_m0_h2b <- as.data.frame(VarCorr(m0_h2b))
+  icc_h2b <- var_m0_h2b$vcov[1] / (var_m0_h2b$vcov[1] + var_m0_h2b$vcov[2]) 
   
-  # null model -------------------------------------------------------------------
-  # m0_h2b <- nlme(model = sv ~ 1,
-  #                data = h2b_data,
-  #                random = ~ 1 | subject, 
-  #                method = "REML")
+  # random slopes model --------------------------------------------------------
   
-  # full model -------------------------------------------------------------------
-  # random intercept vs. random slope ???
-  # "subject-specific intercepts" speaks for random-slopes-model, as within this model 
-  # the slope is allowed to vary between subjects 
+  ## maximal model ---- 
   
-  # m1_h2b <- nlme(sv ~ d.cwc + meanrt.cwc + level.cwc + (level.cwc| subject),
-  #                data = h2b_data,
-  #                fixed = ...,
-  #                random = ...,
-  #                control = ...,
-  #                method = "REML")
-  
-  # initVals <- getInitial(sv ~ d.cwc + meanrt.cwc + level.cwc, data = h2b_data)
-  
-  # get initial values for mlm start
-  fm.lm <- lm(sv ~ d.cwc + meanrt.cwc + level.cwc, h2b_data)
-  st <- coef(fm.lm)
-  
-  m1_h2b <- nlme(sv ~ d.cwc + meanrt.cwc + level.cwc,
+  m1_h2b <- lmer(sv ~ level.cwc + d.cwc + meanrt.cwc + (level.cwc|subject), 
                  data = h2b_data,
-                 #fixed = d.cwc + meanrt.cwc + level.cwc ~ 1,
-                 fixed = list(d.cwc ~ 1, meanrt ~ 1, level.cwc ~ 1),
-                 random = level.cwc ~ 1 | subject,
-                 start = list(fixed = st[2:4]),
-                 method = "REML")
+                 REML = T) # parameters estimated by maximizing restricted log-likelihood
   
+  # (1) if a warning message is produced, check random effects
+    summary(m1_h2b)$varcor
+    # (11) if all SDs are different from 0 and correlations look good (unequal to zero)
+      # this message should be a false positive and this model can be reported
+    # (12) if (11) is not true, check all available optimizers
+      n_cores <- parallel::detectCores()
+      opt_cl <- makeCluster(n_cores, type = "SOCK")
+      clusterEvalQ(opt_cl, library("lme4"))
+      clusterExport(opt_cl, "h2b_data")
+      m1_h2b_all <- allFit(m1_h2b, parallel = "snow", ncpus = n_cores, cl = opt_cl) 
+      stopCluster(opt_cl)
+      summary(m1_h2b_all)$msgs
+      # (121) if an optimizer returns NULL, use this optimizer and recalculate model to get the final model
   
-  # change global coding to default ----------------------------------------------
-  options(contrasts = c("contr.treatment", "contr.poly"))
+  # (2) if (121) is not true OR a singular fit message occurs, check for potential outliers and recalculate
+    potential_outliers_m1_h2b <- subset(h2b_data, abs(scale(resid(m1_h2b))) > 3)    
+    percentage_outliers <- 100/nrow(h2b_data) * nrow(potential_outliers_m1_h2b)
+    # get new subset excluding outliers
+    h2b_data_norm <- droplevels(subset(h2b_data, abs(scale(resid(m1_h2b))) < 3))
+    # start with (1) again
+  
+  # (3) if (1) and (2) do not help, start reducing the model stepwise
+  
 
 ```
 
