looked furher into AUCs

--- a/06_Paper/COG-ED/Manuscript.Rmd
+++ b/06_Paper/COG-ED/Manuscript.Rmd
@@ -706,7 +706,6 @@ The SVs of all other n-back level pairs were not significantly different.
 
 ```
 
-**something is wrong with the AUC calculation**
 
 ```{r AUC_demo, echo=FALSE, message=FALSE, warning=FALSE}
 
@@ -716,11 +715,13 @@ sv = permutations(n = 4, r = 4, v = c(0.1,0.4,0.85,1))
 m = 1
 for (n in 1:(nrow(demo_data)/4)) {
   demo_data$subject[m:(m+3)] = rep(n,4)
-  demo_data$sv[m:(m+3)] = sv[n,]
+  #demo_data$sv[m:(m+3)] = sv[n,]
+  demo_data$sv[m:(m+3)] = sample(x = c(0.11,0.38,0.45,0.53,0.70,0.85,0.90,1.00), size = 4, replace = FALSE, prob = c(0.025,0.025,0.05,0.05,0.05,0.05,0.05,0.7))
   m = m + 4
 }
 subjectindex <- c(1,which(demo_data$subject != dplyr::lag(demo_data$subject)),nrow(demo_data))
-demo_sv <- data.frame(subject = character(), auc_sv = double(), auc_sv_unsorted = double())
+demo_sv <- data.frame(subject = character(), auc_sv = double(), auc_sv_unsorted = double(),
+                      ascent_mean = double(), ascent_sum = double(), auc_x_ascentmean = double())
 for (i in 1:(length(subjectindex)-1)) {
   sv_sorted <- sort(demo_data$sv[subjectindex[i]:(subjectindex[i]+3)])
   newdata <- data.frame(subject = demo_data$subject[subjectindex[i]],
@@ -731,7 +732,17 @@ for (i in 1:(length(subjectindex)-1)) {
                                                0.5 * (demo_data$sv[subjectindex[i]+2] + demo_data$sv[subjectindex[i]+3])),
                         auc_sv_sorted = (0.5 * (sv_sorted[1] + sv_sorted[2]) +
                                            0.5 * (sv_sorted[2] + sv_sorted[3]) +
-                                           0.5 * (sv_sorted[3] + sv_sorted[4])))
+                                           0.5 * (sv_sorted[3] + sv_sorted[4])),
+                        ascent_mean = ((demo_data$sv[subjectindex[i]+3] - demo_data$sv[subjectindex[i]+2]) +
+                                        (demo_data$sv[subjectindex[i]+2] - demo_data$sv[subjectindex[i]+1]) +
+                                        (demo_data$sv[subjectindex[i]+1] - demo_data$sv[subjectindex[i]]))/3,
+                        ascent_sum = (demo_data$sv[subjectindex[i]+3] - demo_data$sv[subjectindex[i]+2]) +
+                                        (demo_data$sv[subjectindex[i]+2] - demo_data$sv[subjectindex[i]+1]) +
+                                        (demo_data$sv[subjectindex[i]+1] - demo_data$sv[subjectindex[i]]),
+                        auc_x_ascentmean = auc(demo_data$level[subjectindex[i]:(subjectindex[i]+3)], demo_data$sv[subjectindex[i]:(subjectindex[i]+3)],
+                                               method = "trapezoid") * (((demo_data$sv[subjectindex[i]+3] - demo_data$sv[subjectindex[i]+2]) +
+                                        (demo_data$sv[subjectindex[i]+2] - demo_data$sv[subjectindex[i]+1]) +
+                                        (demo_data$sv[subjectindex[i]+1] - demo_data$sv[subjectindex[i]]))/3))
   demo_sv <- rbind(demo_sv, newdata)
 }
 ggplot(demo_data, aes(x=level, y=sv, group=subject)) +
