added Aldao 2010 and Yoon 2013

--- a/06_Paper/ER-ED/ER_ED.bib
+++ b/06_Paper/ER-ED/ER_ED.bib
@@ -13,6 +13,20 @@
    year = {2009},
 }
 
+@article{Aldao2010,
+   author = {Aldao, A. and Nolen-Hoeksema, S. and Schweizer, S.},
+   title = {Emotion-regulation strategies across psychopathology: A meta-analytic review},
+   journal = {Clinical Psychology Review},
+   volume = {30},
+   number = {2},
+   pages = {217-237},
+   ISSN = {0272-7358},
+   DOI = {10.1016/j.cpr.2009.11.004},
+   url = {https://www.ncbi.nlm.nih.gov/pubmed/20015584
+https://www.sciencedirect.com/science/article/pii/S0272735809001597?via%3Dihub},
+   year = {2010},
+}
+
 @article{Aldao2015,
    author = {Aldao, A. and Sheppes, G. and Gross, J. J.},
    title = {Emotion regulation flexibility},
@@ -392,6 +406,21 @@ https://onlinelibrary.wiley.com/doi/pdfdirect/10.1111/j.0022-3506.2004.00263.x?d
   shorttitle = {What {Is} the {Subjective} {Cost} of {Cognitive} {Effort}?},
   url        = {https://journals.plos.org/plosone/article?id=10.1371/journal.pone.0068210},
   urldate    = {2021-06-29},
+}
+
+@article{Yoon2013,
+   author = {Yoon, K. L. and Maltby, J. and Joormann, J.},
+   title = {A pathway from neuroticism to depression: examining the role of emotion regulation},
+   journal = {Anxiety, Stress, & Coping},
+   volume = {26},
+   number = {5},
+   pages = {558-72},
+   ISSN = {1477-2205 (Electronic)
+1061-5806 (Linking)},
+   DOI = {10.1080/10615806.2012.734810},
+   url = {https://www.ncbi.nlm.nih.gov/pubmed/23078141
+http://www.tandfonline.com/doi/pdf/10.1080/10615806.2012.734810?needAccess=true},
+   year = {2013},
 }
 
 @Book{Yu2010,
