added reference Blanke2020

--- a/06_Paper/ER-ED/ER_ED.bib
+++ b/06_Paper/ER-ED/ER_ED.bib
@@ -63,6 +63,20 @@ https://link.springer.com/content/pdf/10.1007%2Fs10608-014-9662-4.pdf},
    year = {2004},
 }
 
+@article{Blanke2020,
+   author = {Blanke, E. S. and Brose, A. and Kalokerinos, E. K. and Erbas, Y. and Riediger, M. and Kuppens, P.},
+   title = {Mix it to fix it: Emotion regulation variability in daily life},
+   journal = {Emotion},
+   volume = {20},
+   number = {3},
+   pages = {473-485},
+   ISSN = {1931-1516 (Electronic)
+1528-3542 (Linking)},
+   DOI = {10.1037/emo0000566},
+   url = {https://www.ncbi.nlm.nih.gov/pubmed/30714776},
+   year = {2020},
+}
+
 @article{Bless1994,
    author = {Bless, H. and Wanke, M. and Bohner, G. and Fellhauer, R. F. and Schwarz, N.},
    title = {Need for cognition - a scale measuring engagement and happiness in cognitive tasks},
